kubernetes/ingress.yaml
## Assuming ingress controller is setup and running, it would have spun up and ELB

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx-test"
    nginx.ingress.kubernetes.io/rewrite-target: /app/$1
    nginx.ingress.kubernetes.io/ingress.class: "nginx-test"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: test-app
          servicePort: 3000
        path: /app/?(.*)
